--- a/menu.conf
+++ b/menu.conf
@@ -6,7 +6,7 @@
         {	
           "type": "click",
           "name": "秘境趣闻",
-          "key": "image|*|mijingquwen"
+          "key": "image:mijingquwen"
         },
         {
           "type": "view",
@@ -23,7 +23,7 @@
     {
       "type": "click",
       "name": "集合点",
-      "key": "news|*|jihedian"
+      "key": "news:jihedian"
     },
     {
       "name":"休闲空间",
@@ -31,12 +31,12 @@
         {	
           "type": "click",
           "name": "夏禹的游戏间",
-          "key": "image|*|xiayudeyouxijian"
+          "key": "image:xiayudeyouxijian"
         },
         {	
           "type": "click",
           "name": "小九的时空门",
-          "key": "image|*|xiaojiudeshikongmen"
+          "key": "image:xiaojiudeshikongmen"
         }
       ]
     }
